body : Affichage 'min-heihgt : 100 vh' + Reparamétrage des polices pour écran de 320px à 1200px + collapse.jsx : Correction erreur React 'key unique'

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  /* min-height: 100vh; */
+  min-height: 100vh;
   /* max-width: 1440px; */
   max-width: 90rem;
   margin: auto;
@@ -49,6 +49,29 @@ span {
   font-size: 2.5rem;
 }
 
+/* Début version Ecrans de 320px jusqu'à 1200px*/
+@media all and (min-width: 320px) and (max-width: 1200px) {
+  h2 {
+    font-size: calc(0.7 * 1.5625rem); /*=17.5px*/
+  }
+  h3 {
+    font-size: calc(0.75 * 1.375rem); /*=16.5px*/
+  }
+  h4,
+  a {
+    font-size: calc(0.7 * 1.25rem); /*=14px*/
+  }
+  p,
+  li,
+  span {
+    font-size: calc(0.75 * 1.125rem); /*=13.5px*/
+  }
+  /* .charFront {
+    font-size: calc(0.7 * 2.5rem);
+  } */
+}
+/* Fin version Ecrans de 320px jusqu'à 1200px*/
+
 /* Début version commune Mobile de 320px jusqu'à 768px*/
 @media all and (max-width: 1024px) {
   main {
@@ -59,46 +82,8 @@ span {
 
 /* Début version Mobile jusqu'à 529px*/
 @media all and (max-width: 529px) {
-  h2 {
-    font-size: calc(0.7 * 1.5625rem);
-  }
-  h3 {
-    font-size: calc(0.7 * 1.375rem);
-  }
-  h4,
-  a {
-    font-size: calc(0.7 * 1.25rem);
-  }
-  p,
-  li,
-  span {
-    font-size: calc(0.7 * 1.125rem);
-  }
   .charFront {
     font-size: calc(0.5 * 2.5rem);
   }
 }
 /* Fin version Mobile jusqu'à 529 px*/
-
-/* Début version Mobile de 530px jusqu'à 768px*/
-@media all and (min-width: 530px) and (max-width: 768px) {
-  h2 {
-    font-size: calc(0.8 * 1.5625rem);
-  }
-  h3 {
-    font-size: calc(0.8 * 1.375rem);
-  }
-  h4,
-  a {
-    font-size: calc(0.8 * 1.25rem);
-  }
-  p,
-  li,
-  span {
-    font-size: calc(0.8 * 1.125rem);
-  }
-  /* .charFront {
-    font-size: calc(0.7 * 2.5rem);
-  } */
-}
-/* Fin version Mobile de 530px jusqu'à 768px*/
